--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.12.8",
     "axios": "^1.6.3",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
